# Queue_count_intelligence

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
configs/: coded_mask.yaml  defocus.yaml  learnable_psf.yaml  sweep.yaml
frontend/: index.html
qci/: __init__.py
qci/analytics/: __init__.py  history.py  queue_status.py  service_rate.py
qci/counting/: __init__.py  base.py  blob.py  crowd_regime.py  csrnet.py  density.py  hog.py  yolo.py
qci/data/: __init__.py  shanghaitech.py  synthetic.py
qci/eval/: __init__.py  metrics.py  runner.py
qci/geometry/: __init__.py  camera.py  depth.py  homography.py  queue_length.py
qci/optics/: __init__.py  degradation.py  encoder.py  psf_utils.py
qci/privacy/: __init__.py  analyzer.py  face_attacker.py  face_data.py  inversion_attacker.py  recognition_attacker.py
qci/recovery/: __init__.py  base.py  classical.py  none.py
qci/server/: api.py  config.py  seed.py  stations.py  worker.py
scripts/: demo.py  frequency_analysis.py  generate_crowd_grid.py  generate_presentation_outputs.py  run_analytics.py  run_full_pipeline.py  run_geometry.py  run_privacy_eval.py  run_sweep.py
tests/: test_analytics.py  test_counters.py  test_degradation.py  test_encoder.py  test_geometry.py  test_metrics.py  test_pipeline.py  test_privacy.py  test_server.py
